# lib_shared_pointers

./: CMakeLists.txt  README.md
include/public/: libsharedpointers.h
src/: lib_sharedpointers.c  libsharedpointers.c
